--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Главная страница
+  <title>Бургеры
   </title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -240,7 +240,7 @@
         <li class="navigation-dots__item"><a><span></span></a></li>
       </ul>
     </div>
-    
+
   </div>
   
 </body>
