add img directory path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Бургеры
   </title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <section class="section section--align--top hero">
       <div class="container hero__container">
         <header class="header">
-          <img class="logo" src="/img/icons/logo.svg" alt="mr burger logo">
+          <img class="logo" src="./img/icons/logo.svg" alt="mr burger logo">
           <div class="header__btns">
             <nav class="menu">
               <ul class="menu__list">
