fixed points of comments

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 
     <section class="section features">
       <div class="container">
-        <h2 class="section__title section__title--centered section__title--color--black">Мы лучшие</h2>
+        <h2 class="section__title section__title--color--black">Мы лучшие</h2>
         <ul class="features__list">
           <li class="features__item feature">
             <div class="feature__img">
               <img class="feature__img-elem" src="./img/icons/meat.svg" alt="fried chicken">
             </div>
             <div class="feature__content">
-              <h3 class="feature__title">100% Свежее мясо</h3>
-              <div class="feature__text">
+              <h3>100% Свежее мясо</h3>
+              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
                 </p>
@@ -76,8 +76,8 @@
               <img class="feature__img-elem" src="./img/icons/hand.svg" alt="fried chicken">
             </div>
             <div class="feature__content">
-              <h3 class="feature__title">Ручная сборка</h3>
-              <div class="feature__text">
+              <h3>Ручная сборка</h3>
+              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
                   притягивает сюжетный реформаторский пафос.
@@ -90,8 +90,8 @@
               <img class="feature__img-elem" src="./img/icons/natural.svg" alt="fried chicken">
             </div>
             <div class="feature__content">
-              <h3 class="feature__title">Натуральные ингридиенты</h3>
-              <div class="feature__text">
+              <h3>Натуральные ингридиенты</h3>
+              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
                 </p>
