--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
             </div>
             <div class="feature__content">
               <h3>100% Свежее мясо</h3>
-              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
                 </p>
-              </div>
             </div>
           </li>
           <li class="features__item feature">
@@ -77,12 +75,10 @@
             </div>
             <div class="feature__content">
               <h3>Ручная сборка</h3>
-              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
                   притягивает сюжетный реформаторский пафос.
                 </p>
-              </div>
             </div>
           </li>
           <li class="features__item feature">
@@ -91,11 +87,9 @@
             </div>
             <div class="feature__content">
               <h3>Натуральные ингридиенты</h3>
-              <div>
                 <p>
                   Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
                 </p>
-              </div>
             </div>
           </li>
         </ul>
@@ -226,6 +220,49 @@
         </li>
       </ul>
     </section>
+    
+    <!-- Верстка 2й недели -->
+    <!-- <section class="section team">
+      <div class="team-container">
+        <div class="accordion-container">
+          <h2 class="section__title">Команда</h2>
+          <div class="accordion vertical">
+            <section id="one">
+              <h2><a href="#one">Дениел Редклиф</a></h2>
+              <div class="team__item-pic">
+                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              </div>
+              <h3>Оператор</h3>
+              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+            </section>
+            <section id="two">
+              <h2><a href="#two">Ричард Джеймс</a></h2>
+              <div class="team__item-pic">
+                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              </div>
+              <h3>Оператор</h3>
+              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+            </section>
+            <section id="tree">
+              <h2><a href="#tree">Джейк Финн</a></h2>
+              <div class="team__item-pic">
+                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              </div>
+              <h3>Оператор</h3>
+              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+            </section>
+            <section id="four">
+              <h2><a href="#four">Николай Иванов</a></h2>
+              <div class="team__item-pic">
+                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              </div>
+              <h3>Оператор</h3>
+              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+            </section>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
     <div class="dots">
       <ul class="navigation-dots">
@@ -242,7 +279,7 @@
     </div>
 
   </div>
-  
+
 </body>
 
 </html>
