--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </div>
             <div class="feature__content">
               <h3>100% Свежее мясо</h3>
-                <p>
-                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-                </p>
+              <p>
+                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+              </p>
             </div>
           </li>
           <li class="features__item feature">
@@ -75,10 +75,10 @@
             </div>
             <div class="feature__content">
               <h3>Ручная сборка</h3>
-                <p>
-                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
-                  притягивает сюжетный реформаторский пафос.
-                </p>
+              <p>
+                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
+                притягивает сюжетный реформаторский пафос.
+              </p>
             </div>
           </li>
           <li class="features__item feature">
@@ -87,9 +87,9 @@
             </div>
             <div class="feature__content">
               <h3>Натуральные ингридиенты</h3>
-                <p>
-                  Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-                </p>
+              <p>
+                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+              </p>
             </div>
           </li>
         </ul>
@@ -220,44 +220,60 @@
         </li>
       </ul>
     </section>
-    
+
     <!-- Верстка 2й недели -->
-    <!-- <section class="section team">
-      <div class="team-container">
+    <!-- <section class="section teams">
+      <div class="team-content">
         <div class="accordion-container">
           <h2 class="section__title">Команда</h2>
           <div class="accordion vertical">
             <section id="one">
-              <h2><a href="#one">Дениел Редклиф</a></h2>
-              <div class="team__item-pic">
-                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              <h2><a class="team__name" href="#one">Дэниэл Редклиф</a></h2>
+              <div class="team">
+                <div class="team__item-pic">
+                  <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+                </div>
+                <div class="team__text">
+                  <h3>Оператор</h3>
+                  <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+                </div>
               </div>
-              <h3>Оператор</h3>
-              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
             </section>
             <section id="two">
-              <h2><a href="#two">Ричард Джеймс</a></h2>
-              <div class="team__item-pic">
-                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              <h2><a class="team__name" href="#two">Ричард Джеймс</a></h2>
+              <div class="team">
+                <div class="team__item-pic">
+                  <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+                </div>
+                <div class="team__text">
+                  <h3>Оператор</h3>
+                  <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+                </div>
               </div>
-              <h3>Оператор</h3>
-              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
             </section>
             <section id="tree">
-              <h2><a href="#tree">Джейк Финн</a></h2>
-              <div class="team__item-pic">
-                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              <h2><a class="team__name" href="#tree">Джейк Финн</a></h2>
+              <div class="team">
+                <div class="team__item-pic">
+                  <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+                </div>
+                <div class="team__text">
+                  <h3>Оператор</h3>
+                  <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+                </div>
               </div>
-              <h3>Оператор</h3>
-              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
             </section>
             <section id="four">
-              <h2><a href="#four">Николай Иванов</a></h2>
-              <div class="team__item-pic">
-                <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+              <h2><a class="team__name" href="#four">Николай Иванов</a></h2>
+              <div class="team">
+                <div class="team__item-pic">
+                  <img class="team__avatar-img" src="./img/content/photos-team/team2.png" alt="photo">
+                </div>
+                <div class="team__text">
+                  <h3>Оператор</h3>
+                  <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
+                </div>
               </div>
-              <h3>Оператор</h3>
-              <h3>С радостью поможет подобрать идеальный бургер и оформить заказ</h3>
             </section>
           </div>
         </div>
