add section slidder

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
               </div>
             </div>
           </div>
-        </div><a class="down-arrow" href="#" data-scroll-to="1">
+        </div>
+        <a class="down-arrow" href="#" data-scroll-to="1">
           <svg class="down-arrow__icon">
             <use xlink:href="./img/sprite/sprite.svg#arrow-scroll"></use>
           </svg></a>
@@ -102,6 +103,51 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="section slider">
+        <div class="slider__section container">
+          <a class="left-arrow" href="#">
+            <svg class="left-arrow__icon" style="fill: #fff">
+              <use xlink:href="./img/sprite/sprite.svg#arrow-scroll"></use>
+            </svg></a>
+          <div class="slider__container">
+            <div class="slider__content">
+              <div class="slider__left">
+                <div class="slider__left-item">
+                  <a class="slider__structure" href="#">
+                    <svg class="slider__icon-pic">
+                      <use xlink:href="./img/sprite/sprite.svg#burger"></use>
+                    </svg>
+                    <div class="slider__item-text">состав</div>
+                  </a>
+                  <a class="slider__calories" href="#">
+                    <svg class="slider__icon-pic">
+                      <use xlink:href="./img/sprite/sprite.svg#kkal"></use>
+                    </svg>
+                    <div class="slider__item-text slider__text-calories">1200</div>
+                    <div class="slider__item-text">ккал</div>
+                  </a>
+                </div>
+                <img class="slider__menu-img" src="./img/content/dark_burger.png" alt="">
+              </div>
+              <div class="slider__right">
+                <div class="section__title section__title_white slider__title">Dark beef burger</div>
+                <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
+                  тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
+                  добавлением экзотического соуса чураско.</div>
+                <div class="slider__links">
+                  <div class="section__title section__title_red">500</div>
+                  <div class="section__title section__title_red slider__title-link">рублей</div>
+                  <a class="order-link btn" href="">Заказать</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="right-arrow" href="#">
+            <svg class="right-arrow__icon" style="fill: #fff">
+              <use xlink:href="./img/sprite/sprite.svg#arrow-scroll"></use>
+            </svg></a>
         </div>
       </section>
       <section class="section team">
