--- a/index.html
+++ b/index.html
@@ -489,21 +489,6 @@
       </section>
     </div>
   </div>
-  <script>
-
-  const open = document.querySelector('#open');
-  const close = document.querySelector('#close');
-  const menu= document.querySelector('#menu');
-  
-    open.addEventListener('click', function() {
-      menu.style.display = 'block';
-    })
-
-    close.addEventListener('click', function() {
-      menu.style.display = 'none';
-    })
-  
-  </script>
   <div class="hamburger-menu" id="menu">
     <div class="hamburger-menu__logo"><a class="logo" href="#"><img src="./img/icons/logo.svg"></a></div>
     <div class="hamburger-menu__items">
@@ -564,6 +549,27 @@
       <a class="status-popup__close btn" href="#">Закрыть</a>
     </div>
   </div> -->
+
+    <script>
+
+      let open = document.querySelector('#open');
+      let close = document.querySelector('#close');
+      let menu = document.querySelector('#menu');
+
+      open.addEventListener('click', function (event) {
+        event.preventDefault();
+      });
+
+      open.addEventListener('click', function () {
+        menu.style.display = 'flex';
+      })
+
+      close.addEventListener('click', function () {
+        menu.style.display = 'none';
+      })
+
+    </script>
+
 </body>
 
 </html>
