--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <ul class="team-acco">
             <li class="team-acco__item">
               <a class="team-acco__trigger" href="#">Дэниэл Редклифф</a>
-              <div class="team-acco__content">
+              <div class="team-acco__content" id="team1">
                 <div class="team-acco__pic">
                   <div class="team-acco__img" style="background-image: url('./img/content/photos-team/team2.png')">
                   </div>
@@ -170,8 +170,8 @@
               </div>
             </li>
             <li class="team-acco__item">
-              <a class="team-acco__trigger show-hidden" href="#">Ричард Джеймс</a>
-              <div class="team-acco__content show-hidden">
+              <a class="team-acco__trigger" href="#">Ричард Джеймс</a>
+              <div class="team-acco__content">
                 <div class="team-acco__pic">
                   <div class="team-acco__img" style="background-image: url('./img/content/photos-team/team2.png')">
                   </div>
@@ -237,8 +237,8 @@
               style="background-image: url('./img/bg/vegetarian-bg.png')">
               <div class="menu-acco__trigger-text">Вегетарианское</div>
             </a>
-            <div class="menu-acco__content show-hidden__menu">
-              <div class="menu-acco__text show-hidden">
+            <div class="menu-acco__content">
+              <div class="menu-acco__text">
                 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
                 конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник
                 стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания,
@@ -489,7 +489,7 @@
       </section>
     </div>
   </div>
-  <div class="hamburger-menu" id="menu">
+  <div class="hamburger-menu" id="burger">
     <div class="hamburger-menu__logo"><a class="logo" href="#"><img src="./img/icons/logo.svg"></a></div>
     <div class="hamburger-menu__items">
       <nav class="nav nav_hamburger">
@@ -550,26 +550,7 @@
     </div>
   </div> -->
 
-    <script>
-
-      let open = document.querySelector('#open');
-      let close = document.querySelector('#close');
-      let menu = document.querySelector('#menu');
-
-      open.addEventListener('click', function (event) {
-        event.preventDefault();
-      });
-
-      open.addEventListener('click', function () {
-        menu.style.display = 'flex';
-      })
-
-      close.addEventListener('click', function () {
-        menu.style.display = 'none';
-      })
-
-    </script>
-
+<script src="/scripts/script.js"></script>
 </body>
 
 </html>
