--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <img class="slider__menu-img" src="./img/content/dark_burger.png" alt="">
               </div>
               <div class="slider__right">
-                <div class="section__title section__title_white slider__title">Dark beef burger</div>
+                <div class="section__title section__title-slider">Dark beef burger</div>
                 <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
                   тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
                   добавлением экзотического соуса чураско.</div>
@@ -163,7 +163,7 @@
                 <img class="slider__menu-img" src="./img/content/sandwich_burger.png" alt="">
               </div>
               <div class="slider__right">
-                <div class="section__title section__title_white slider__title">Sandwich</div>
+                <div class="section__title section__title-slider">Sandwich</div>
                 <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
                   тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
                   добавлением экзотического соуса чураско.</div>
@@ -194,7 +194,7 @@
                 <img class="slider__menu-img" src="./img/content/chiken_burger.png" alt="">
               </div>
               <div class="slider__right">
-                <div class="section__title section__title_white slider__title">chiken burger</div>
+                <div class="section__title section__title-slider">chiken burger</div>
                 <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
                   тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
                   добавлением экзотического соуса чураско.</div>
@@ -225,7 +225,7 @@
                 <img class="slider__menu-img" src="./img/content/cheese_burger.png" alt="">
               </div>
               <div class="slider__right">
-                <div class="section__title section__title_white slider__title">Nyc diner bacon cheeseburger</div>
+                <div class="section__title section__title-slider">Nyc diner bacon cheeseburger</div>
                 <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
                   тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
                   добавлением экзотического соуса чураско.</div>
@@ -256,7 +256,7 @@
                 <img class="slider__menu-img" src="./img/content/spicy_burger.png" alt="">
               </div>
               <div class="slider__right">
-                <div class="section__title section__title_white slider__title">Spacy shrimp burger</div>
+                <div class="section__title section__title-slider">Spacy shrimp burger</div>
                 <div class="slider__text-content">Ваш старый добрый знакомый, с рубленным бифштексом из 100% говядины,
                   тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с
                   добавлением экзотического соуса чураско.</div>
