--- a/index.html
+++ b/index.html
@@ -397,10 +397,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/1.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Вера</div>
-                <div class="review__shorttext">Первые Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -410,10 +409,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/2.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Константин Спилберг</div>
-                <div class="review__shorttext">Новые Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -423,10 +421,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/3.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Елена</div>
-                <div class="review__shorttext">Главные Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -436,10 +433,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/4.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Станислав</div>
-                <div class="review__shorttext">Другие Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -449,10 +445,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/5.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Сергей</div>
-                <div class="review__shorttext">Постоянные Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -462,10 +457,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/6.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Елизавета</div>
-                <div class="review__shorttext">Вечные Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -475,10 +469,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/7.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Виталий</div>
-                <div class="review__shorttext">Определенные Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -488,10 +481,9 @@
               <div class="review__photo" style="background-image: url('./img/content/photo-reviews/8.png')"></div>
               <div class="review__hover">
                 <div class="review__title">Артём</div>
-                <div class="review__shorttext">Важные Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
-                  забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                  расплавленным.</div>
                 <div class="review__button-wrap">
+                  <p class="review__shorttext">1Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+                    быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них... </p>
                   <a class="review__view" href="#full-review">Подробнее</a></div>
               </div>
             </div>
@@ -650,13 +642,8 @@
       </svg>
     </a>
     <div class="full-review__inner">
-      <div class="full-review__title">Констнтин Спилберг</div>
+      <div class="full-review__title"></div>
       <div class="full-review__content">
-        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
-        быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них.
-        Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой
-        сочной, а сыр таким расплавленным.
-
       </div>
     </div>
   </div>
